...
    return description;
  };

  return (
    <ScrollView contentContainerStyle={styles.content}>
      <View style={styles.challengeHeader}>
        <Text style={styles.challengeTitle}>Your Challenges</Text>
        <Text style={styles.challengeSubtitle}>
          Complete these challenges to reduce your water footprint. Watch the educational videos and make sustainable choices to earn achievements. Aiming to transform your habits and save water.
        </Text>
      </View>

      {/* Show Active Tasks */}
...
